# molecule_template

./: .ansible-lint  .env.yml  .pre-commit-config.yaml  .pymarkdown  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: molecule.yml  release.yml
files/: converge.yml  molecule.yml
meta/: main.yml
molecule/default/: converge.yml  molecule.yml  prepare.yml  requirements.yml
molecule/default/tests/: test_system.py
tasks/: main.yml
